[POLAR] Add SkinnerDB